# secure-hybrid-event-logging

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.db-chain.yml  docker-compose.db.yml  docker-compose.infra.yml  docker-compose.yml  hardhat.config.js  package-lock.json  package.json  tsconfig.json
contracts/: BatchStore.sol  HashStore.sol  LogStore.sol  explorer.html
docs/: progress-slides.md
exonum-logstore/: docker-compose.yml  logstore.yaml
exonum-logstore/backend/: Cargo.toml
exonum-logstore/backend/patches/actix-http/src/: lib.rs
exonum-logstore/backend/patches/actix-http/src/cookie/: jar.rs  mod.rs
exonum-logstore/backend/src/: api.rs  lib.rs  log_entry.rs  main.rs  schema.rs  transactions.rs
exonum-logstore/backend/src/batch_service/: api.rs  mod.rs  schema.rs  transactions.rs
exonum-logstore/backend/src/hash_service/: api.rs  mod.rs  schema.rs  transactions.rs
exonum-logstore/backend/src/log_service/: api.rs  mod.rs  schema.rs  transactions.rs
exonum-logstore/backend/src/proto/: batch_service.proto  hash_service.proto  log_service.proto  mod.rs  service.proto
exonum-logstore/docker/: Dockerfile  launch.sh
exonum-logstore/frontend/: .eslintrc.json  index.html  package-lock.json  package.json  server.js  webpack.config.js
hybrid-logging-frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
hybrid-logging-frontend/src/: App.vue  main.js
scripts/: deploy.js  gen-exonum-keypair.js  run-experiments.sh  test-chain-exonum.ts  test-chain.ts
src/api/: server.ts
(+56 files in other folders)
